--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
 <body>
 	<div id="root">
-		<div class="content-wrapper font-Karla max-x-screen-2xl text-base mx-auto px-8 bg-slate-200">
+		<div class="content-wrapper font-Karla max-x-screen-2xl text-base mx-auto px-8 ">
 			<header class="p-6 mx-auto">
 				<nav class="flex flex-row justify-between items-center relative">
 					<div class="logo basis-2/6 text-center text-xl font-semibold cursor-pointer">CoffeeShop.</div>
@@ -63,8 +63,19 @@
 				</nav>
 			</header>
 			<main>
-				<div class="slider">
-					Slide
+				<div class="slider h-[530px] bg-[url('/src/img/slide-background.webp')] bg-cover bg-center">
+					<div class="w-full h-full flex justify-center items-center bg-gray-900/40">
+						<div class="text-white mx-16 text-center">
+							<div class="uppercase text-md mb-6">best place to buy design</div>
+							<div class="font-medium text-5xl mb-6">Coffee Mugs</div>
+							<div class="text-lg font-medium mb-8">The most versatile furniture system ever created. Designed to fit your life, made to move and grow.</div>
+							<div class="flex justify-center items-center">
+								<div class="uppercase bg-white text-gray-900 w-max tracking-wide py-4 px-6 font-semibold text-sm cursor-pointer hover:bg-white/90">
+									Explore Our Products
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 				<div class="story">
 					story
