complete: adding story and subheadline

--- a/src/index.html
+++ b/src/index.html
@@ -15,26 +15,25 @@
 			<header class="p-6 mx-auto">
 				<nav class="flex flex-row justify-between items-center relative">
 					<div class="logo basis-2/6 text-center text-xl font-semibold cursor-pointer">CoffeeShop.</div>
-					<ul
-						id="ct-top-menu"
+					<ul id="ct-top-menu"
 						class="basis-3/6 hidden lg:flex lg:items-center lg:justify-end lg:gap-8 uppercase text-sm text-gray-500 font-medium">
-						
-						<li data-id="home"  class="ct-top-menu-item">
+
+						<li data-id="home" class="ct-top-menu-item">
 							<a href="#" class="">Home</a>
 						</li>
-						<li data-id="product"  class="ct-top-menu-item">
+						<li data-id="product" class="ct-top-menu-item">
 							<a href="#" class="">Products</a>
 						</li>
-						<li data-id="blog"  class="ct-top-menu-item">
+						<li data-id="blog" class="ct-top-menu-item">
 							<a href="#" class="">Blog</a>
 						</li>
-						<li data-id="about"  class="ct-top-menu-item">
+						<li data-id="about" class="ct-top-menu-item">
 							<a href="#" class="">About</a>
 						</li>
-						<li data-id="contact"  class="ct-top-menu-item">
+						<li data-id="contact" class="ct-top-menu-item">
 							<a href="#" class="">Contact</a>
 						</li>
-						<li data-id="style-guide"  class="ct-top-menu-item ct-top-menu-item-active">
+						<li data-id="style-guide" class="ct-top-menu-item ct-top-menu-item-active">
 							<a href="#" class="">StyleGuide</a>
 						</li>
 					</ul>
@@ -54,8 +53,8 @@
 						</li>
 					</ul>
 					<div class="lg:hidden basis-1/6 flex items-center cursor-pointer px-2 sm:px-4">
-						<svg id="ct-toggle-top-menu-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-							stroke="currentColor" class="ct-icon">
+						<svg id="ct-toggle-top-menu-icon" xmlns="http://www.w3.org/2000/svg" fill="none"
+							viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="ct-icon">
 							<path stroke-linecap="round" stroke-linejoin="round"
 								d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
 						</svg>
@@ -68,27 +67,73 @@
 						<div class="text-white mx-16 text-center">
 							<div class="uppercase text-md mb-6">best place to buy design</div>
 							<div class="font-medium text-5xl mb-6">Coffee Mugs</div>
-							<div class="text-lg font-medium mb-8">The most versatile furniture system ever created. Designed to fit your life, made to move and grow.</div>
+							<div class="text-lg font-medium mb-8">The most versatile furniture system ever created.
+								Designed to fit your life, made to move and grow.</div>
 							<div class="flex justify-center items-center">
-								<div class="uppercase bg-white text-gray-900 w-max tracking-wide py-4 px-6 font-semibold text-sm cursor-pointer hover:bg-white/90">
+								<div
+									class="uppercase bg-white text-gray-900 w-max tracking-wide py-4 px-6 font-semibold text-sm cursor-pointer hover:bg-white/90">
 									Explore Our Products
 								</div>
 							</div>
 						</div>
 					</div>
-				</div>
+				</div><!--END STORY-->
+
 				<div class="story">
-					story
+					<div class="w-full h-full flex justify-center item-center">
+						<div class="px-4 sm:px-16 md:px-32 lg:px-64 xl:px-96 py-32 text-center">
+							<div class="text-3xl leading-10 mb-6 max-w-[658px]">Even the all-powerful Pointing has no
+								control about the blind texts.</div>
+							<div class="text-gray-500 leading-7 mb-6 max-w-[658px]">It is a paradisematic country, in
+								which roasted parts of sentences fly into your mouth. <br>Even the all-powerful Pointing
+								has no control about the blind texts it is an almost unorthographic life One day however
+								a small line of blind text by the name of Lorem Ipsum decided to leave for the far World
+								of Grammar.</div>
+							<a class="text-md text-coffee-600 hover:text-coffee-700 relative after:-bottom-2 after:left-0 after:absolute after:bg-coffee-300 after:hover:bg-coffee-600 after:w-full after:h-0.5 max-w-[658px]"
+								href="#">Read the full Story</a>
+						</div>
+					</div>
+				</div><!--END SLIDE-->
+
+				<div class="ct-subheadline">
+					<div class="ct-subheadline-decorline"></div>
+					<div class="ct-subheadline-lable">features mugs</div>
+					<div class="ct-subheadline-decorline"></div>
 				</div>
 				<div class="feature-mugs">
 					mug
+				</div><!--END MUGS-->
+
+				<div class="ct-subheadline">
+					<div class="ct-subheadline-decorline"></div>
+					<div class="ct-subheadline-lable">more product</div>
+					<div class="ct-subheadline-decorline"></div>
+				</div>
+				<div class="more-product">
+					more product
+				</div><!--END MORE PRODUCT-->
+
+				<div class="ct-subheadline">
+					<div class="ct-subheadline-decorline"></div>
+					<div class="ct-subheadline-lable">Buy 2 mugs and get a coffee magazine free</div>
+					<div class="ct-subheadline-decorline"></div>
 				</div>
 				<div class="coffee-magazine">
 					coffee-magazine
+				</div><!--END COFFEE MAGAZINE-->
+
+
+
+				<div class="ct-subheadline">
+					<div class="ct-subheadline-decorline"></div>
+					<div class="ct-subheadline-lable">Behind the mugs, lifestyle stories</div>
+					<div class="ct-subheadline-decorline"></div>
 				</div>
 				<div class="lifestyle-stories">
 					lifestyle stories
-				</div>
+				</div><!--END LIFESTYLE STORIES-->
+
+				
 				<div class="subcribe">
 					subcribe
 				</div>
