complete: adding feature mugs

--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
 				</nav>
 			</header>
 			<main>
-				<div class="slider h-[530px] bg-[url('/src/img/slide-background.webp')] bg-cover bg-center">
+				<div class="slider h-[530px] bg-[url('/src/img/slide-background.webp')] bg-cover bg-no-repeat bg-bottom">
 					<div class="w-full h-full flex justify-center items-center bg-gray-900/40">
 						<div class="text-white mx-16 text-center">
 							<div class="uppercase text-md mb-6">best place to buy design</div>
@@ -71,7 +71,7 @@
 								Designed to fit your life, made to move and grow.</div>
 							<div class="flex justify-center items-center">
 								<div
-									class="uppercase bg-white text-gray-900 w-max tracking-wide py-4 px-6 font-semibold text-sm cursor-pointer hover:bg-white/90">
+									class="ct-explore-lable">
 									Explore Our Products
 								</div>
 							</div>
@@ -79,8 +79,7 @@
 					</div>
 				</div><!--END STORY-->
 
-				<div class="story">
-					<div class="w-full h-full flex justify-center item-center">
+				<div class="story flex justify-center item-center">
 						<div class="px-4 sm:px-16 md:px-32 lg:px-64 xl:px-96 py-32 text-center">
 							<div class="text-3xl leading-10 mb-6 max-w-[658px]">Even the all-powerful Pointing has no
 								control about the blind texts.</div>
@@ -92,7 +91,6 @@
 							<a class="text-md text-coffee-600 hover:text-coffee-700 relative after:-bottom-2 after:left-0 after:absolute after:bg-coffee-300 after:hover:bg-coffee-600 after:w-full after:h-0.5 max-w-[658px]"
 								href="#">Read the full Story</a>
 						</div>
-					</div>
 				</div><!--END SLIDE-->
 
 				<div class="ct-subheadline">
@@ -100,8 +98,45 @@
 					<div class="ct-subheadline-lable">features mugs</div>
 					<div class="ct-subheadline-decorline"></div>
 				</div>
-				<div class="feature-mugs">
-					mug
+				<div class="feature-mugs w-[95%] lg:w-[65%] mx-auto mb-24">
+					<div class="grid lg:grid-cols-2 lg:gap-6 gap-y-8">
+						<div class="ct-product-card">
+							<div class="bg-[url('/src/img/products/feature-mug-2.webp')] h-[400px] sm:h-[540px] bg-center bg-no-repeat bg-cover">
+								<a href="" alt="">
+									<div class="w-full h-full hover:bg-gray-900/10 transition duration-300 ease-in-out relative group">
+										<div class="absolute ct-explore-lable w-11/12! bottom-4 text-center left-1/2 -translate-x-1/2 hidden group-hover:block animate-fadeIn">Explore Mug</div>
+									</div>
+								</a>
+							</div>
+							<div class="text-center mt-8">
+								<a href="#" alt="">
+									<div class="text-xl mb-3 hover:text-coffee-600">Pink Premium Ceramic</div>
+									<div class="">
+										<span class="text-sm text-gray-500">$99.00</span>
+									</div>
+								</a>
+							</div>
+						</div>
+						<div class="ct-product-card">
+							<div class="bg-[url('/src/img/products/feature-mug-1.webp')] h-[400px] sm:h-[540px] bg-center bg-no-repeat bg-cover">
+								<a href="" alt="">
+									<div class="w-full h-full hover:bg-gray-900/10 transition duration-300 ease-in-out relative group">
+										<div class="absolute bg-white w-25 px-4 py-2 text-center right-3 top-3 text-coffee-700 font-medium text-sm">On Sale.</div>
+										<div class="absolute ct-explore-lable w-11/12! bottom-4 text-center left-1/2 -translate-x-1/2 hidden group-hover:block animate-fadeIn">Explore Mug</div>
+									</div>
+								</a>
+							</div>
+							<div class="text-center mt-8">
+								<a href="#" alt="">
+									<div class="text-xl mb-3 hover:text-coffee-600">Golden Designers Mug</div>
+									<div class="">
+										<span class="text-lg text-coffee-500">$50.00</span>
+										<span class="mr-2 text-sm text-gray-400 line-through">$69.00</span>
+									</div>
+								</a>
+							</div>
+						</div>
+					</div>
 				</div><!--END MUGS-->
 
 				<div class="ct-subheadline">
@@ -133,7 +168,7 @@
 					lifestyle stories
 				</div><!--END LIFESTYLE STORIES-->
 
-				
+
 				<div class="subcribe">
 					subcribe
 				</div>
