complete: adding more product

--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,8 @@
 				</nav>
 			</header>
 			<main>
-				<div class="slider h-[530px] bg-[url('/src/img/slide-background.webp')] bg-cover bg-no-repeat bg-bottom">
+				<div
+					class="slider h-[530px] bg-[url('/src/img/slide-background.webp')] bg-cover bg-no-repeat bg-bottom">
 					<div class="w-full h-full flex justify-center items-center bg-gray-900/40">
 						<div class="text-white mx-16 text-center">
 							<div class="uppercase text-md mb-6">best place to buy design</div>
@@ -70,8 +71,7 @@
 							<div class="text-lg font-medium mb-8">The most versatile furniture system ever created.
 								Designed to fit your life, made to move and grow.</div>
 							<div class="flex justify-center items-center">
-								<div
-									class="ct-explore-lable">
+								<div class="ct-explore-lable">
 									Explore Our Products
 								</div>
 							</div>
@@ -80,17 +80,17 @@
 				</div><!--END STORY-->
 
 				<div class="story flex justify-center item-center">
-						<div class="px-4 sm:px-16 md:px-32 lg:px-64 xl:px-96 py-32 text-center">
-							<div class="text-3xl leading-10 mb-6 max-w-[658px]">Even the all-powerful Pointing has no
-								control about the blind texts.</div>
-							<div class="text-gray-500 leading-7 mb-6 max-w-[658px]">It is a paradisematic country, in
-								which roasted parts of sentences fly into your mouth. <br>Even the all-powerful Pointing
-								has no control about the blind texts it is an almost unorthographic life One day however
-								a small line of blind text by the name of Lorem Ipsum decided to leave for the far World
-								of Grammar.</div>
-							<a class="text-md text-coffee-600 hover:text-coffee-700 relative after:-bottom-2 after:left-0 after:absolute after:bg-coffee-300 after:hover:bg-coffee-600 after:w-full after:h-0.5 max-w-[658px]"
-								href="#">Read the full Story</a>
-						</div>
+					<div class="px-4 sm:px-16 md:px-32 lg:px-64 xl:px-96 py-32 text-center">
+						<div class="text-3xl leading-10 mb-6 max-w-[658px]">Even the all-powerful Pointing has no
+							control about the blind texts.</div>
+						<div class="text-gray-500 leading-7 mb-6 max-w-[658px]">It is a paradisematic country, in
+							which roasted parts of sentences fly into your mouth. <br>Even the all-powerful Pointing
+							has no control about the blind texts it is an almost unorthographic life One day however
+							a small line of blind text by the name of Lorem Ipsum decided to leave for the far World
+							of Grammar.</div>
+						<a class="text-md text-coffee-600 hover:text-coffee-700 relative after:-bottom-2 after:left-0 after:absolute after:bg-coffee-300 after:hover:bg-coffee-600 after:w-full after:h-0.5 max-w-[658px]"
+							href="#">Read the full Story</a>
+					</div>
 				</div><!--END SLIDE-->
 
 				<div class="ct-subheadline">
@@ -99,12 +99,16 @@
 					<div class="ct-subheadline-decorline"></div>
 				</div>
 				<div class="feature-mugs w-[95%] lg:w-[65%] mx-auto mb-24">
-					<div class="grid lg:grid-cols-2 lg:gap-6 gap-y-8">
+					<div class="grid lg:grid-cols-2  lg:gap-6 gap-y-8">
 						<div class="ct-product-card">
-							<div class="bg-[url('/src/img/products/feature-mug-2.webp')] h-[400px] sm:h-[540px] bg-center bg-no-repeat bg-cover">
+							<div
+								class="bg-[url('/src/img/products/feature-mug-2.webp')] h-[400px] sm:h-[540px] bg-center bg-no-repeat bg-cover">
 								<a href="" alt="">
-									<div class="w-full h-full hover:bg-gray-900/10 transition duration-300 ease-in-out relative group">
-										<div class="absolute ct-explore-lable w-11/12! bottom-4 text-center left-1/2 -translate-x-1/2 hidden group-hover:block animate-fadeIn">Explore Mug</div>
+									<div
+										class="w-full h-full hover:bg-gray-900/10 transition duration-300 ease-in-out relative group">
+										<div
+											class="absolute ct-explore-lable w-11/12! bottom-4 text-center left-1/2 -translate-x-1/2 hidden group-hover:block animate-fadeIn">
+											Explore Mug</div>
 									</div>
 								</a>
 							</div>
@@ -112,17 +116,23 @@
 								<a href="#" alt="">
 									<div class="text-xl mb-3 hover:text-coffee-600">Pink Premium Ceramic</div>
 									<div class="">
-										<span class="text-sm text-gray-500">$99.00</span>
+										<span class="text-lg text-gray-500">$99.00</span>
 									</div>
 								</a>
 							</div>
 						</div>
 						<div class="ct-product-card">
-							<div class="bg-[url('/src/img/products/feature-mug-1.webp')] h-[400px] sm:h-[540px] bg-center bg-no-repeat bg-cover">
+							<div
+								class="bg-[url('/src/img/products/feature-mug-1.webp')] h-[400px] sm:h-[540px] bg-center bg-no-repeat bg-cover">
 								<a href="" alt="">
-									<div class="w-full h-full hover:bg-gray-900/10 transition duration-300 ease-in-out relative group">
-										<div class="absolute bg-white w-25 px-4 py-2 text-center right-3 top-3 text-coffee-700 font-medium text-sm">On Sale.</div>
-										<div class="absolute ct-explore-lable w-11/12! bottom-4 text-center left-1/2 -translate-x-1/2 hidden group-hover:block animate-fadeIn">Explore Mug</div>
+									<div
+										class="w-full h-full hover:bg-gray-900/10 transition duration-300 ease-in-out relative group">
+										<div
+											class="absolute bg-white w-25 py-2 text-center right-3 top-3 text-coffee-700 font-medium text-sm">
+											On Sale.</div>
+										<div
+											class="absolute ct-explore-lable w-11/12! bottom-4 text-center left-1/2 -translate-x-1/2 hidden group-hover:block animate-fadeIn">
+											Explore Mug</div>
 									</div>
 								</a>
 							</div>
@@ -130,8 +140,8 @@
 								<a href="#" alt="">
 									<div class="text-xl mb-3 hover:text-coffee-600">Golden Designers Mug</div>
 									<div class="">
-										<span class="text-lg text-coffee-500">$50.00</span>
-										<span class="mr-2 text-sm text-gray-400 line-through">$69.00</span>
+										<span class="text-xl text-coffee-500">$50.00</span>
+										<span class="mr-2 text-lg text-gray-400 line-through">$69.00</span>
 									</div>
 								</a>
 							</div>
@@ -144,8 +154,206 @@
 					<div class="ct-subheadline-lable">more product</div>
 					<div class="ct-subheadline-decorline"></div>
 				</div>
-				<div class="more-product">
-					more product
+				<div class="more-product  w-[95%] lg:w-[65%] mx-auto mb-24">
+					<div class="grid md:grid-cols-2 lg:grid-cols-3 md:gap-4 gap-8">
+						<div class="ct-product-card">
+							<div
+								class="bg-[url('/src/img/products/more-product-1.webp')] h-[380px] bg-center bg-no-repeat bg-cover">
+								<a href="" alt="">
+									<div
+										class="w-full h-full hover:bg-gray-900/10 transition duration-300 ease-in-out relative group">
+										<div
+										class="absolute bg-white w-25 py-2 text-center right-3 top-3 text-coffee-700 font-medium text-sm">
+										On Sale.</div>
+										<div
+											class="absolute ct-explore-lable w-11/12! bottom-4 text-center left-1/2 -translate-x-1/2 hidden group-hover:block animate-fadeIn">
+											Explore Mug</div>
+									</div>
+								</a>
+							</div>
+							<div class="text-center my-8">
+								<a href="#" alt="">
+									<div class="text-xl mb-3 hover:text-coffee-600">Red Love Cup</div>
+									<div class="">
+										<span class="text-xl text-coffee-500">$25.00</span>
+										<span class="text-lg text-gray-400 line-through">$37.00</span>
+									</div>
+								</a>
+							</div>
+						</div>
+						<div class="ct-product-card">
+							<div
+								class="bg-[url('/src/img/products/more-product-2.webp')] h-[380px] bg-center bg-no-repeat bg-cover">
+								<a href="" alt="">
+									<div
+										class="w-full h-full hover:bg-gray-900/10 transition duration-300 ease-in-out relative group">
+										<div
+											class="absolute bg-white w-25 py-2 text-center right-3 top-3 text-coffee-700 font-medium text-sm">
+											On Sale.</div>
+										<div
+											class="absolute ct-explore-lable w-11/12! bottom-4 text-center left-1/2 -translate-x-1/2 hidden group-hover:block animate-fadeIn">
+											Explore Mug</div>
+									</div>
+								</a>
+							</div>
+							<div class="text-center my-8">
+								<a href="#" alt="">
+									<div class="text-xl mb-3 hover:text-coffee-600">Black Tea Cup</div>
+									<div class="">
+										<span class="text-xl text-coffee-500">$15.00</span>
+										<span class="text-lg text-gray-400 line-through">$29.00</span>
+									</div>
+								</a>
+							</div>
+						</div>
+						<div class="ct-product-card">
+							<div
+								class="bg-[url('/src/img/products/more-product-3.webp')] h-[380px] bg-center bg-no-repeat bg-cover">
+								<a href="" alt="">
+									<div
+										class="w-full h-full hover:bg-gray-900/10 transition duration-300 ease-in-out relative group">
+										<div
+											class="absolute ct-explore-lable w-11/12! bottom-4 text-center left-1/2 -translate-x-1/2 hidden group-hover:block animate-fadeIn">
+											Explore Mug</div>
+									</div>
+								</a>
+							</div>
+							<div class="text-center my-8">
+								<a href="#" alt="">
+									<div class="text-xl mb-3 hover:text-coffee-600">B&W Essentials Mug</div>
+									<div class="">
+										<span class="text-lg text-gray-400">$19.00</span>
+									</div>
+								</a>
+							</div>
+						</div>
+						<div class="ct-product-card">
+							<div
+								class="bg-[url('/src/img/products/more-product-4.webp')] h-[380px] bg-center bg-no-repeat bg-cover">
+								<a href="" alt="">
+									<div
+										class="w-full h-full hover:bg-gray-900/10 transition duration-300 ease-in-out relative group">
+										<div
+											class="absolute ct-explore-lable w-11/12! bottom-4 text-center left-1/2 -translate-x-1/2 hidden group-hover:block animate-fadeIn">
+											Explore Mug</div>
+									</div>
+								</a>
+							</div>
+							<div class="text-center my-8">
+								<a href="#" alt="">
+									<div class="text-xl mb-3 hover:text-coffee-600">Winter Style Mug</div>
+									<div class="">
+										<span class="text-lg text-gray-400">$25.00</span>
+									</div>
+								</a>
+							</div>
+						</div>
+						<div class="ct-product-card">
+							<div
+								class="bg-[url('/src/img/products/more-product-5.webp')] h-[380px] bg-center bg-no-repeat bg-cover">
+								<a href="" alt="">
+									<div
+										class="w-full h-full hover:bg-gray-900/10 transition duration-300 ease-in-out relative group">
+										<div
+											class="absolute ct-explore-lable w-11/12! bottom-4 text-center left-1/2 -translate-x-1/2 hidden group-hover:block animate-fadeIn">
+											Explore Mug</div>
+									</div>
+								</a>
+							</div>
+							<div class="text-center my-8">
+								<a href="#" alt="">
+									<div class="text-xl mb-3 hover:text-coffee-600">Ceramic Tea</div>
+									<div class="">
+										<span class="text-lg text-gray-400">$46.00</span>
+									</div>
+								</a>
+							</div>
+						</div>
+						<div class="ct-product-card">
+							<div
+								class="bg-[url('/src/img/products/more-product-6.webp')] h-[380px] bg-center bg-no-repeat bg-cover">
+								<a href="" alt="">
+									<div
+										class="w-full h-full hover:bg-gray-900/10 transition duration-300 ease-in-out relative group">
+										<div
+											class="absolute ct-explore-lable w-11/12! bottom-4 text-center left-1/2 -translate-x-1/2 hidden group-hover:block animate-fadeIn">
+											Explore Mug</div>
+									</div>
+								</a>
+							</div>
+							<div class="text-center my-8">
+								<a href="#" alt="">
+									<div class="text-xl mb-3 hover:text-coffee-600">No Handle Bar Cup</div>
+									<div class="">
+										<span class="text-lg text-gray-400">$34.00</span>
+									</div>
+								</a>
+							</div>
+						</div>
+						<div class="ct-product-card">
+							<div
+								class="bg-[url('/src/img/products/more-product-7.webp')] h-[380px] bg-center bg-no-repeat bg-cover">
+								<a href="" alt="">
+									<div
+										class="w-full h-full hover:bg-gray-900/10 transition duration-300 ease-in-out relative group">
+										<div
+											class="absolute ct-explore-lable w-11/12! bottom-4 text-center left-1/2 -translate-x-1/2 hidden group-hover:block animate-fadeIn">
+											Explore Mug</div>
+									</div>
+								</a>
+							</div>
+							<div class="text-center my-8">
+								<a href="#" alt="">
+									<div class="text-xl mb-3 hover:text-coffee-600">Espresso Cup by Mugs.co</div>
+									<div class="">
+										<span class="text-lg text-gray-400">$25.00</span>
+									</div>
+								</a>
+							</div>
+						</div>
+						<div class="ct-product-card">
+							<div
+								class="bg-[url('/src/img/products/more-product-8.webp')] h-[380px] bg-center bg-no-repeat bg-cover">
+								<a href="" alt="">
+									<div
+										class="w-full h-full hover:bg-gray-900/10 transition duration-300 ease-in-out relative group">
+										<div
+											class="absolute ct-explore-lable w-11/12! bottom-4 text-center left-1/2 -translate-x-1/2 hidden group-hover:block animate-fadeIn">
+											Explore Mug</div>
+									</div>
+								</a>
+							</div>
+							<div class="text-center my-8">
+								<a href="#" alt="">
+									<div class="text-xl mb-3 hover:text-coffee-600">Pink Premium Ceramic</div>
+									<div class="">
+										<span class="text-lg text-gray-400">$99.00</span>
+									</div>
+								</a>
+							</div>
+						</div>
+						<div class="ct-product-card">
+							<div
+								class="bg-[url('/src/img/products/more-product-9.webp')] h-[380px] bg-center bg-no-repeat bg-cover">
+								<a href="" alt="">
+									<div
+										class="w-full h-full hover:bg-gray-900/10 transition duration-300 ease-in-out relative group">
+										<div
+											class="absolute ct-explore-lable w-11/12! bottom-4 text-center left-1/2 -translate-x-1/2 hidden group-hover:block animate-fadeIn">
+											Explore Mug</div>
+									</div>
+								</a>
+							</div>
+							<div class="text-center my-8">
+								<a href="#" alt="">
+									<div class="text-xl mb-3 hover:text-coffee-600">Summer Designer Cup</div>
+									<div class="">
+										<span class="text-lg text-gray-400">$29.00</span>
+									</div>
+								</a>
+							</div>
+						</div>
+					</div>
 				</div><!--END MORE PRODUCT-->
 
 				<div class="ct-subheadline">
