--- a/src/index.html
+++ b/src/index.html
@@ -98,7 +98,7 @@
 					<div class="ct-subheadline-lable">features mugs</div>
 					<div class="ct-subheadline-decorline"></div>
 				</div>
-				<div class="feature-mugs w-[95%] lg:w-[65%] mx-auto mb-24">
+				<div class="feature-mugs w-[95%] xl:w-[65%] mx-auto mb-24">
 					<div class="grid lg:grid-cols-2  lg:gap-6 gap-y-8">
 						<div class="ct-product-card">
 							<div
@@ -154,7 +154,7 @@
 					<div class="ct-subheadline-lable">more product</div>
 					<div class="ct-subheadline-decorline"></div>
 				</div>
-				<div class="more-product  w-[95%] lg:w-[65%] mx-auto mb-24">
+				<div class="more-product w-[95%] xl:w-[65%] mx-auto mb-24">
 					<div class="grid md:grid-cols-2 lg:grid-cols-3 md:gap-4 gap-8">
 						<div class="ct-product-card">
 							<div
@@ -361,8 +361,27 @@
 					<div class="ct-subheadline-lable">Buy 2 mugs and get a coffee magazine free</div>
 					<div class="ct-subheadline-decorline"></div>
 				</div>
-				<div class="coffee-magazine">
-					coffee-magazine
+				<div class="coffee-magazine w-[95%] xl:w-[65%] mx-auto mb-24">
+					<div class="flex flex-col md:flex-row justify-center items-center gap-6">
+						<div class="md:basis-1/2 flex flex-col md:flex-row justify-start gap-3 sm:gap-5 w-full h-full xsmb-5 md:mb-0">
+							<div class="md:basis-2/3 bg-[url('/src/img/products/magazine-image-1.webp')] h-[280px] w-full bg-center bg-no-repeat bg-cover">
+							</div>
+							<div class="md:basis-1/3 flex flex-row md:flex-col md:justify-between gap-3 sm:gap-5 w-full h-full">
+								<div class="bg-[url('/src/img/products/magazine-image-2.webp')] md:h-[130px] h-[200px] w-full bg-center bg-no-repeat bg-cover"></div>
+								<div class="bg-[url('/src/img/products/magazine-image-3.webp')] md:h-[130px] h-[200px] w-full bg-center bg-no-repeat bg-cover"></div>
+							</div>
+						</div>
+						<div class="md:basis-1/2 flex flex-col gap-4 text-center md:text-left">
+						 <div class="uppercase tracking-widest text-gray-500 font-medium text-xs">Premium Offer</div>
+						 <div class="font-medium lg:text-4xl text-3xl">Get our Coffee Magazine</div>
+						 <div class="text-gray-500 leading-7 md:w-[350px]">The most versatile furniture system ever created. Designed to fit your life.</div>
+						 <div class="uppercase bg-gray-900  text-white w-max  text-xs font-medium tracking-widest group cursor-pointer self-center md:self-auto">
+							<div class="group-hover:bg-white/20 px-6 py-4">
+								start shopping
+							</div>
+						 </div>
+						</div>
+					</div>
 				</div><!--END COFFEE MAGAZINE-->
 
 
@@ -384,7 +403,7 @@
 			<footer>footer</footer>
 		</div>
 	</div>
-	<script src="./js/main.js" async></script>
+	<!-- <script src="./js/main.js" async></script> -->
 </body>
 
 </html>
