completed: parallax section

--- a/src/index.html
+++ b/src/index.html
@@ -384,7 +384,9 @@
 					</div>
 				</div><!--END COFFEE MAGAZINE-->
 
+				<div class="ct-parallax-section bg-[url('/src/img/parallax.webp')]  h-[380px] w-[100vw] relative  left-[calc(-50vw+50%)] bg-center bg-no-repeat bg-cover mx-auto mb-24 bg-fixed">
 
+				</div><!--END PARALLAX SECTION-->
 
 				<div class="ct-subheadline">
 					<div class="ct-subheadline-decorline"></div>
