completed: adding subscrible section

--- a/src/index.html
+++ b/src/index.html
@@ -163,8 +163,8 @@
 									<div
 										class="w-full h-full hover:bg-gray-900/10 transition duration-300 ease-in-out relative group">
 										<div
-										class="absolute bg-white w-25 py-2 text-center right-3 top-3 text-coffee-700 font-medium text-sm">
-										On Sale.</div>
+											class="absolute bg-white w-25 py-2 text-center right-3 top-3 text-coffee-700 font-medium text-sm">
+											On Sale.</div>
 										<div
 											class="absolute ct-explore-lable w-11/12! bottom-4 text-center left-1/2 -translate-x-1/2 hidden group-hover:block animate-fadeIn">
 											Explore Mug</div>
@@ -363,28 +363,38 @@
 				</div>
 				<div class="coffee-magazine w-[95%] xl:w-[65%] mx-auto mb-24">
 					<div class="flex flex-col md:flex-row justify-center items-center gap-6">
-						<div class="md:basis-1/2 flex flex-col md:flex-row justify-start gap-3 sm:gap-5 w-full h-full xsmb-5 md:mb-0">
-							<div class="md:basis-2/3 bg-[url('/src/img/products/magazine-image-1.webp')] h-[280px] w-full bg-center bg-no-repeat bg-cover">
+						<div
+							class="md:basis-1/2 flex flex-col md:flex-row justify-start gap-3 sm:gap-5 w-full h-full xsmb-5 md:mb-0">
+							<div
+								class="md:basis-2/3 bg-[url('/src/img/products/magazine-image-1.webp')] h-[280px] w-full bg-center bg-no-repeat bg-cover">
 							</div>
-							<div class="md:basis-1/3 flex flex-row md:flex-col md:justify-between gap-3 sm:gap-5 w-full h-full">
-								<div class="bg-[url('/src/img/products/magazine-image-2.webp')] md:h-[130px] h-[200px] w-full bg-center bg-no-repeat bg-cover"></div>
-								<div class="bg-[url('/src/img/products/magazine-image-3.webp')] md:h-[130px] h-[200px] w-full bg-center bg-no-repeat bg-cover"></div>
+							<div
+								class="md:basis-1/3 flex flex-row md:flex-col md:justify-between gap-3 sm:gap-5 w-full h-full">
+								<div
+									class="bg-[url('/src/img/products/magazine-image-2.webp')] md:h-[130px] h-[200px] w-full bg-center bg-no-repeat bg-cover">
+								</div>
+								<div
+									class="bg-[url('/src/img/products/magazine-image-3.webp')] md:h-[130px] h-[200px] w-full bg-center bg-no-repeat bg-cover">
+								</div>
 							</div>
 						</div>
 						<div class="md:basis-1/2 flex flex-col gap-4 text-center md:text-left">
-						 <div class="uppercase tracking-widest text-gray-500 font-medium text-xs">Premium Offer</div>
-						 <div class="font-medium lg:text-4xl text-3xl">Get our Coffee Magazine</div>
-						 <div class="text-gray-500 leading-7 md:w-[350px]">The most versatile furniture system ever created. Designed to fit your life.</div>
-						 <div class="uppercase bg-gray-900  text-white w-max  text-xs font-medium tracking-widest group cursor-pointer self-center md:self-auto">
-							<div class="group-hover:bg-white/20 px-6 py-4">
-								start shopping
+							<div class="uppercase tracking-widest text-gray-500 font-medium text-xs">Premium Offer</div>
+							<div class="font-medium lg:text-4xl text-3xl">Get our Coffee Magazine</div>
+							<div class="text-gray-500 leading-7 md:w-[350px]">The most versatile furniture system ever
+								created. Designed to fit your life.</div>
+							<div
+								class="uppercase bg-gray-900  text-white w-max  text-xs font-medium tracking-widest group cursor-pointer self-center md:self-auto">
+								<div class="group-hover:bg-white/20 px-6 py-4">
+									start shopping
+								</div>
 							</div>
-						 </div>
 						</div>
 					</div>
 				</div><!--END COFFEE MAGAZINE-->
 
-				<div class="ct-parallax-section bg-[url('/src/img/parallax.webp')]  h-[380px] w-[100vw] relative  left-[calc(-50vw+50%)] bg-center bg-no-repeat bg-cover mx-auto mb-24 bg-fixed">
+				<div
+					class="ct-parallax-section bg-[url('/src/img/parallax.webp')]  h-[380px] w-[100vw] relative  left-[calc(-50vw+50%)] bg-center bg-no-repeat bg-cover mx-auto mb-24 bg-fixed">
 
 				</div><!--END PARALLAX SECTION-->
 
@@ -393,19 +403,107 @@
 					<div class="ct-subheadline-lable">Behind the mugs, lifestyle stories</div>
 					<div class="ct-subheadline-decorline"></div>
 				</div>
-				<div class="lifestyle-stories">
-					lifestyle stories
+				<div class="lifestyle-stories w-[95%] xl:w-[65%] mx-auto mb-24">
+					<div class="grid md:grid-cols-2 lg:grid-cols-3 md:gap-4 gap-8">
+						<div class="ct-product-card w-[300px] justify-self-center">
+							<div
+								class="bg-[url('/src/img/products/lifestyle-1.webp')] bg-center bg-no-repeat bg-cover w-full h-[300px]">
+								<a href="" alt="">
+									<div
+										class="w-full h-full hover:bg-gray-900/10 transition duration-300 ease-in-out relative group">
+										<div
+											class="absolute ct-explore-lable w-11/12! bottom-4 text-center left-1/2 -translate-x-1/2 hidden group-hover:block animate-fadeIn">
+											READ THE FULL STORY
+										</div>
+									</div>
+								</a>
+							</div>
+							<div class="text-center md:text-left my-8 flex flex-col gap-5">
+								<a href="#" alt="" class="text-xl mb-3 hover:text-coffee-600 tracking-wide">Health
+									Check: why do I get
+									a headache when I haven’t had my coffee?</a>
+								<div class="text-[16px] text-gray-400 tracking-wide">It is a paradisematic country, in
+									which roasted parts
+									of sentences fly into your mouth.</div>
+								<div class="text-xs text-gray-400 uppercase font-bold tracking-wide">October 9, 2018
+								</div>
+							</div>
+						</div>
+						<div class="ct-product-card w-[300px] justify-self-center">
+							<div
+								class="bg-[url('/src/img/products/lifestyle-2.webp')] bg-center bg-no-repeat bg-cover w-full h-[300px]">
+								<a href="" alt="">
+									<div
+										class="w-full h-full hover:bg-gray-900/10 transition duration-300 ease-in-out relative group">
+										<div
+											class="absolute ct-explore-lable w-11/12! bottom-4 text-center left-1/2 -translate-x-1/2 hidden group-hover:block animate-fadeIn">
+											READ THE FULL STORY
+										</div>
+									</div>
+								</a>
+							</div>
+							<div class="text-center md:text-left my-8 flex flex-col gap-5">
+								<a href="#" alt="" class="text-xl mb-3 hover:text-coffee-600 tracking-wide">How long
+									does a cup of coffee keep you awake?</a>
+								<div class="text-[16px] text-gray-400 tracking-wide">
+									It is a paradisematic country, in which roasted parts. Vel qui et ad voluptatem.
+								</div>
+								<div class="text-xs text-gray-400 uppercase font-bold tracking-wide">October 9, 2018
+								</div>
+							</div>
+						</div>
+						<div class="ct-product-card w-[300px] justify-self-center">
+							<div
+								class="bg-[url('/src/img/products/lifestyle-3.webp')] bg-center bg-no-repeat bg-cover w-full h-[300px]">
+								<a href="" alt="">
+									<div
+										class="w-full h-full hover:bg-gray-900/10 transition duration-300 ease-in-out relative group">
+										<div
+											class="absolute ct-explore-lable w-11/12! bottom-4 text-center left-1/2 -translate-x-1/2 hidden group-hover:block animate-fadeIn">
+											READ THE FULL STORY
+										</div>
+									</div>
+								</a>
+							</div>
+							<div class="text-center md:text-left my-8 flex flex-col gap-5">
+								<a href="#" alt="" class="text-xl mb-3 hover:text-coffee-600 tracking-wide">
+									Recent research suggests that heavy coffee drinkers may reap health benefits.
+								</a>
+								<div class="text-[16px] text-gray-400 tracking-wide">It is a paradisematic country, in
+									which roasted parts of sentences fly into your mouth.</div>
+								<div class="text-xs text-gray-400 uppercase font-bold tracking-wide">October 9, 2018
+								</div>
+							</div>
+						</div>
+					</div>
 				</div><!--END LIFESTYLE STORIES-->
 
 
-				<div class="subcribe">
-					subcribe
+				<div class="subcribe-us h-[330px] bg-slate-900 flex justify-center items-center">
+					<div class="flex flex-col">
+						<div class="ct-subheadline mb-4!">
+							<div class="ct-subheadline-decorline"></div>
+							<div class="ct-subheadline-lable tracking-wide">Sign up and get free coffee bags</div>
+							<div class="ct-subheadline-decorline"></div>
+						</div>
+						<div class="font-semibold text-4xl text-center text-white tracking-widest uppercase mb-6">Coffee Updates</div>
+						<from method="" class="flex flex-col md:flex-row gap-3 items-center">
+							<input class="uppercase text-gray-200 border-1 px-5 py-4 border-gray-200 w-full md:w-[350px] h-[52px] text-xs tracking-widest" type="text" placeholder="customer@coffeestyle.io">
+							<button
+								id="subcribe"
+								class="uppercase text-gray-900  bg-white border-1 border-white  w-full md:w-max h-[52px]  text-xs font-medium tracking-widest group cursor-pointer self-center md:self-auto">
+								<div class="group-hover:bg-gray-900/10 px-6 py-4">
+									Subscribe
+								</div>
+							</button>						
+						</from>
+					</div>
 				</div>
 			</main>
 			<footer>footer</footer>
 		</div>
 	</div>
-	<!-- <script src="./js/main.js" async></script> -->
+	<script src="./js/main.js" defer></script>
 </body>
 
 </html>
