fix: subcribe section

--- a/src/index.html
+++ b/src/index.html
@@ -482,16 +482,16 @@
 				<div class="subcribe-us h-[330px] bg-slate-900 flex justify-center items-center">
 					<div class="flex flex-col">
 						<div class="ct-subheadline mb-4!">
-							<div class="ct-subheadline-decorline"></div>
+							<div class="ct-subheadline-decorline w-8!"></div>
 							<div class="ct-subheadline-lable tracking-wide">Sign up and get free coffee bags</div>
-							<div class="ct-subheadline-decorline"></div>
+							<div class="ct-subheadline-decorline w-8!"></div>
 						</div>
-						<div class="font-semibold text-4xl text-center text-white tracking-widest uppercase mb-6">Coffee Updates</div>
-						<from method="" class="flex flex-col md:flex-row gap-3 items-center">
-							<input class="uppercase text-gray-200 border-1 px-5 py-4 border-gray-200 w-full md:w-[350px] h-[52px] text-xs tracking-widest" type="text" placeholder="customer@coffeestyle.io">
+						<div class=" font-semibold text-4xl text-center text-white tracking-widest mb-6">Coffee Updates</div>
+						<from method="" class="flex flex-col md:flex-row gap-3 items-center justify-center">
+							<input class="md:basis-3/4 uppercase text-center md:text-left text-gray-200 border-1 px-5 py-4 border-gray-200 w-[500px] md:w-[350px] h-[52px] text-xs tracking-widest" type="text" placeholder="customer@coffeestyle.io">
 							<button
 								id="subcribe"
-								class="uppercase text-gray-900  bg-white border-1 border-white  w-full md:w-max h-[52px]  text-xs font-medium tracking-widest group cursor-pointer self-center md:self-auto">
+								class="md:basis-1/4 uppercase text-gray-900  bg-white border-1 border-white  w-full md:w-max h-[52px]  text-xs font-medium tracking-widest group cursor-pointer self-center md:self-auto">
 								<div class="group-hover:bg-gray-900/10 px-6 py-4">
 									Subscribe
 								</div>
