--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
 								</svg>
 
 								<span class="mx-2">Cart</span>
-								<span class="ct-badge-circle bg-orange-400 text-white w-6 h-6">10</span>
+								<span class="ct-badge-circle bg-gray-400 text-white w-6 h-6">10</span>
 							</a>
 						</li>
 					</ul>
@@ -501,39 +501,39 @@
 				</div>
 			</main>
 			<footer class="w-[95%] xl:w-[65%] mx-auto py-25 flex justify-center items-center relative">
-				<div class="grid grid-cols-[4fr_2fr_2fr_4fr] gap-5">
-					<div class="logo text-xl font-semibold cursor-pointer">CoffeeShop.</div>
-					<div class="text-[14px] text-gray-500 font-medium tracking-widest">Delivering the best coffee life since 1996. From coffee geeks to the real ones.</div>
-					<div class="text-gray-300 self-baseline-last mb-2">CoffeeShop Inc. © 1996</div>
-					<div class="text-xs text-gray-500 font-bold tracking-widest uppercase">menu</div>
-					<div class="flex flex-col gap-2">
-						<a class="text-[14px] text-gray-500 font-medium tracking-widest" href="" alt="">Home</a>
-						<a class="text-[14px] text-gray-500 font-medium tracking-widest" href="" alt="">Our Products</a>
-						<a class="text-[14px] text-gray-500 font-medium tracking-widest" href="" alt="">About</a>
-						<a class="text-[14px] text-gray-500 font-medium tracking-widest" href="" alt="">Contact</a>
-						<a class="text-[14px] text-gray-500 font-medium tracking-widest" href="" alt="">Styleguide</a>
+				<div class="flex flex-col justify-center md:grid md:grid-cols-[4fr_2fr_2fr_4fr] gap-5 text-center md:text-start">
+					<div class="text-xl font-semibold cursor-pointer">CoffeeShop.</div>
+					<div class="text-[14px] text-gray-500 font-medium tracking-wide">Delivering the best coffee life since 1996. From coffee geeks to the real ones.</div>
+					<div class="text-gray-300 hover:text-coffee-600 md:self-baseline-last mb-5 md:mb-2">CoffeeShop Inc. © 1996</div>
+					<div class="text-xs text-gray-500 font-bold tracking-widest uppercase mb-5 md:mb-0">menu</div>
+					<div class="flex flex-col gap-2 mb-8 md:mb-0">
+						<a class="text-[14px] text-gray-500 hover:text-coffee-600 font-medium tracking-widest" href="" alt="">Home</a>
+						<a class="text-[14px] text-gray-500 hover:text-coffee-600 font-medium tracking-widest" href="" alt="">Our Products</a>
+						<a class="text-[14px] text-gray-500 hover:text-coffee-600 font-medium tracking-widest" href="" alt="">About</a>
+						<a class="text-[14px] text-gray-500 hover:text-coffee-600 font-medium tracking-widest" href="" alt="">Contact</a>
+						<a class="text-[14px] text-gray-500 hover:text-coffee-600 font-medium tracking-widest" href="" alt="">Styleguide</a>
 					</div>
-					<div class="text-xs text-gray-500 font-bold tracking-widest uppercase">Follow Us</div>
-					<div class="flex items-center">
-						<div class="flex flex-col gap-2">
-							<a class="text-[14px] text-gray-500 font-medium tracking-widest" href="" alt="">Facebook</a>
-							<a class="text-[14px] text-gray-500 font-medium tracking-widest" href="" alt="">Instagram</a>
-							<a class="text-[14px] text-gray-500 font-medium tracking-widest" href="" alt="">Pinterest</a>
-							<a class="text-[14px] text-gray-500 font-medium tracking-widest" href="" alt="">Twitter</a>
+					<div class="text-xs text-gray-500 font-bold tracking-widest uppercase mb-5 md:mb-0">Follow Us</div>
+					<div class="flex items-center justify-center md:justify-start">
+						<div class="flex flex-col gap-2 mb-8 md:mb-0">
+							<a class="text-[14px] text-gray-500 hover:text-coffee-600 font-medium tracking-widest" href="" alt="">Facebook</a>
+							<a class="text-[14px] text-gray-500 hover:text-coffee-600 font-medium tracking-widest" href="" alt="">Instagram</a>
+							<a class="text-[14px] text-gray-500 hover:text-coffee-600 font-medium tracking-widest" href="" alt="">Pinterest</a>
+							<a class="text-[14px] text-gray-500 hover:text-coffee-600 font-medium tracking-widest" href="" alt="">Twitter</a>
 						</div>
 					</div>
-					<div class="text-xs text-gray-500 font-bold tracking-widest uppercase">contact us</div>
-					<div class="flex flex-col">
+					<div class="text-xs text-gray-500 font-bold tracking-widest uppercase mb-5 md:mb-0">contact us</div>
+					<div class="flex flex-col mb-5 md:mb-0">
 						<div class="basis-1/2 text-xs text-gray-500 tracking-widest ">We’re Always Happy to Help</div>
-						<div class="basis-1/2 text text-2xl font-bold">thaingocphu0803@gmail.com</div>
+						<div class="basis-1/2 text text-2xl font-bold hover:text-coffee-600">thaingocphu0803@gmail.com</div>
 					</div>
-					<div class="text-gray-300 self-baseline-last mb-2">Powered by thaingocphu</div>
+					<a class="text-gray-300 hover:text-coffee-600 md:self-baseline-last mb-2" href="" alt="">Powered by thaingocphu</a>
 				</div>
 			</footer><!--END FOOTER-->
-			<div class="flex gap-5 absolute bottom-3 right-3 border-1 border-gray-900 rounded-lg p-2">
+			<a class="flex gap-5 absolute bottom-3 right-3 border-1 border-gray-900 rounded-lg p-2" href="https://github.com/thaingocphu0803" target="_blank" alt="">
 				<svg xmlns="http://www.w3.org/2000/svg"  class="ct-icon" viewBox="0 0 496 512"><path d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3 .3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5 .3-6.2 2.3zm44.2-1.7c-2.9 .7-4.9 2.6-4.6 4.9 .3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3 .7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3 .3 2.9 2.3 3.9 1.6 1 3.6 .7 4.3-.7 .7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3 .7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3 .7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"/></svg>
 				<span>thaingocphu0803</span>
-			</div>
+			</a>
 		</div>
 	</div>
 	<script src="./js/main.js" defer></script>
