fix: adding video on coffee strory

--- a/src/index.html
+++ b/src/index.html
@@ -62,8 +62,7 @@
 				</nav>
 			</header>
 			<main>
-				<div
-					class="slider h-[530px] bg-[url('/src/img/slide-background.webp')] bg-cover bg-no-repeat bg-bottom">
+				<div class="slider h-[530px] bg-[url('/src/img/slide-background.webp')] bg-cover bg-no-repeat bg-bottom mb-24">
 					<div class="w-full h-full flex justify-center items-center bg-gray-900/40">
 						<div class="text-white mx-16 text-center">
 							<div class="uppercase text-md mb-6">best place to buy design</div>
@@ -77,10 +76,20 @@
 							</div>
 						</div>
 					</div>
-				</div><!--END STORY-->
+				</div><!--END SLIDE-->
 
-				<div class="story flex justify-center item-center">
-					<div class="px-4 sm:px-16 md:px-32 lg:px-64 xl:px-96 py-32 text-center">
+				<div class="ct-subheadline">
+					<div class="ct-subheadline-decorline"></div>
+					<div class="ct-subheadline-lable">our story</div>
+					<div class="ct-subheadline-decorline"></div>
+				</div>
+				<div class="story flex flex-col lg:flex-row justify-center items-center gap-8 lg:gap-4 w-[95%] xl:w-[65%] mx-auto mb-24">
+					<div class="basis-1/2">
+						<video class="w-full h-full object-cover min-h-[350px]" autoplay loop muted>
+							<source src="./video/coffee_video.mp4" type="video/mp4">
+						</video>
+					</div>
+					<div class="basis-1/2 text-center lg:text-left lg:pl-6">
 						<div class="text-3xl leading-10 mb-6 max-w-[658px]">Even the all-powerful Pointing has no
 							control about the blind texts.</div>
 						<div class="text-gray-500 leading-7 mb-6 max-w-[658px]">It is a paradisematic country, in
@@ -91,7 +100,7 @@
 						<a class="text-md text-coffee-600 hover:text-coffee-700 relative after:-bottom-2 after:left-0 after:absolute after:bg-coffee-300 after:hover:bg-coffee-600 after:w-full after:h-0.5 max-w-[658px]"
 							href="#">Read the full Story</a>
 					</div>
-				</div><!--END SLIDE-->
+				</div><!--END STORY-->
 
 				<div class="ct-subheadline">
 					<div class="ct-subheadline-decorline"></div>
